Bug 400976, XUL menupopups in HTML document disappear in Firefox 2.0.0.8, r=neil+enndeakin, sr=dveditz, a=dveditz